# cpom_software2

./: .pre-commit-config.yaml  .pylintrc  .setup.sh  .template_for_activation.sh  README.md  activate.sh  install.sh  pyproject.toml  pytest.ini  test_cpom2_slopeandroughness.ipynb
.github/workflows/: code_check.yml  docs_update.yml
build_scripts/: pdocs.sh
docs/: cpom.html  index.html  search.js
docs/cpom/: altimetry.html  areas.html  backgrounds.html  dems.html  gridding.html  masks.html  roughness.html  slopes.html
resources/backgrounds/: images.json  rema_hillshade_stretched_ross.tiff
resources/coastlines/: ais_coastline.save  arctic.bin.old
resources/lake_polygons/: Athabasca_polygons.npz  Hjalmaren_polygons.npz  Malaren_polygons.npz  Okeechobee_polygons.npz  Pontchartrain_polygons.npz  Rayburn_polygons.npz  Red_polygons.npz  Reindeer_polygons.npz  Salt_polygons.npz  Salton_polygons.npz  Siljan_polygons.npz  Storsjon_polygons.npz  Tawakoni_polygons.npz  Vanern_polygons.npz  Vattern_polygons.npz  Winnebago_polygons.npz  Wollaston_polygons.npz  Woods_polygons.npz
resources/mss/: 10km_amundsen_sea_area_mean_mss.npz  10km_antarctic_ocean_mean_mss.npz  10km_filchner_1300km_mean_mss.npz  10km_greenland_mean_mss.npz  10km_greenland_wider_area_mean_mss.npz  10km_ross_1600km_mean_mss.npz  10km_ross_mean_mss.npz  10km_spirit_all_mean_mss.npz  20km_antarctic_mean_mss.npz
resources/rgi/: 07_rgi60_Svalbard.dbf  07_rgi60_Svalbard.shx  09_rgi60_RussianArctic.dbf  09_rgi60_RussianArctic.shx  franz_josef_land_1km_rgi_grid_mask.npz  novaya_zemlya_1km_rgi_grid_mask.npz  (+2 more)
(+552 files in other folders)
