[tool.poetry]
name = "cpom"
version = "0.1.0"
description = "CPOM Software"
authors = ["Alan Muir <a.muir@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.14.0"
netcdf4 = "1.6.5"
matplotlib = "^3.7.1"
cartopy = "^0.23.0"
zarr = "^2.18.2"
scikit-image = "^0.22.0"
rasterio = "^1.3.10"
tifffile = "^2023.4.12"
imagecodecs = "^2023.3.16"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[tool.poetry.group.dev.dependencies]
black = "*"
pre-commit = "*"
pylint = "^3.3.0"
isort = "*"
pytest = "^7.3.1"
sphinx = "^7.0.1"
sphinxcontrib-napoleon = "^0.7"
furo = "^2023.5.20"
pdoc = "^14.6.0"
mypy = "^1.3.0"
ruff = "^0.0.290"
types-python-dateutil = "^2.9.0.20240316"

[tool.isort]
#use black profile so black and isort don't conflict
profile = "black"

[tool.mypy]
python_version="3.12"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  #"I",   # isort : could replace actual isort, but currently causes conflicts
 # "UP",  # pyupgrade
]
target-version = "py312"
#fixable = ["I"]
#fix = true

[tool.black]
line-length = 100
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
